# video-analytics-service

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: config.json
migrations/: 001_create_analysis_results_table.sql
services/frame-analysis/: CMakeLists.txt
services/frame-analysis/src/: main.cpp
services/frame-analysis/src/handlers/: handlers_frw.h  yolo.cpp  yolo.h
services/frame-analysis/yolo/: yolo_analyze.py
services/orchestrator/: CMakeLists.txt
services/orchestrator/src/: main.cpp
services/orchestrator/src/handlers/: handlers_frw.h  status.cpp  status.h  stop.cpp  stop.h  submit_video.cpp  submit_video.h
services/orchestrator/src/redis/: redis.cpp  redis.h
services/orchestrator/src/requests/: requests.cpp  requests.h
services/orchestrator/src/tasks/: migrations.cpp  migrations.h
services/video-post-processing/: CMakeLists.txt
services/video-post-processing/src/: main.cpp
services/video-post-processing/src/handlers/: save_video.cpp  save_video.h
services/video-pre-processing/: CMakeLists.txt
services/video-pre-processing/src/: main.cpp
services/video-pre-processing/src/handlers/: handlers_frw.h  process_video.cpp  process_video.h  yolo.cpp
services/video-pre-processing/yolo/: yolo_analyze.py
utils/cfg/: global_config.cpp  global_config.h
utils/db/: pg.cpp  pg.h  pg_pool.cpp  pg_pool.h
utils/http/: requests.cpp  requests.h  requests_chain.cpp  requests_chain.h
utils/redis/: redis.cpp  redis.h  redis_pool.cpp  redis_pool.h
